syntax = "proto3";

package tech.atls.files.v1alpha1;

import "tech/atls/files/v1alpha1/file.proto";

service FilesService {
  rpc ListOwnedFiles (ListOwnedFilesRequest) returns (ListOwnedFilesResponse) {}
  rpc ListPublicFiles (ListPublicFilesRequest) returns (ListPublicFilesResponse) {}
}

message ListOwnedFilesRequest {
  message Pager {
    int32 offset = 1;
    int32 take = 2;
  }

  message IdQuery {
    optional string eq = 1;
    repeated string in = 2;
  }

  message Query {
    IdQuery id = 1;
  }

  enum OrderDirection {
    ORDER_DIRECTION_ASC_UNSPECIFIED = 0;
    ORDER_DIRECTION_DESC = 1;
  }

  message Order {
    string field = 1;
    OrderDirection direction = 2;
  }

  Pager pager = 1;
  Query query = 2;
  Order order = 3;
}

message ListOwnedFilesResponse {
  repeated File files = 1;
  string has_next_page = 2;
}

message ListPublicFilesRequest {
  message Pager {
    int32 offset = 1;
    int32 take = 2;
  }

  message IdQuery {
    optional string eq = 1;
    repeated string in = 2;
  }

  message Query {
    IdQuery id = 1;
  }

  enum OrderDirection {
    ORDER_DIRECTION_ASC_UNSPECIFIED = 0;
    ORDER_DIRECTION_DESC = 1;
  }

  message Order {
    string field = 1;
    OrderDirection direction = 2;
  }

  Pager pager = 1;
  Query query = 2;
  Order order = 3;
}

message ListPublicFilesResponse {
  repeated File files = 1;
  string has_next_page = 2;
}
